fixed issue with overlapping elements

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -183,7 +183,7 @@ html body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 150vh;
+  height: 100vh;
   object-fit: cover;
 }
 .top-section .logo-wrapper {
@@ -333,7 +333,7 @@ html body {
 }
 .below-hero-image {
   position: absolute;
-  top: 150%;
+  top: 100%;
   width: 100%;
 }
 .below-hero-image .features {
