--- a/LESS/middle-section.less
+++ b/LESS/middle-section.less
@@ -1,6 +1,6 @@
 .below-hero-image {
   position: absolute;
-  top: 150%;
+  top: 100%;
   width: 100%;
 
   // @media (min-height: 370px) {
