--- a/LESS/top-section.less
+++ b/LESS/top-section.less
@@ -43,7 +43,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 150vh;
+    height: 100vh;
     object-fit: cover;
   }
   .logo-wrapper {
